Use singleton impl for map based probability collections